samples/_failures_safe/1761358530_4cc23e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1148c383.c: In function ‘main’:
./samples/SAFE/__tmp_1148c383.c:139:5: error: expected expression at end of input
  139 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_1148c383.c:139:5: error: expected declaration or statement at end of input
